--- a/fr/index.html
+++ b/fr/index.html
@@ -1,12 +1,13 @@
 ---
 layout: default
+lang: fr
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ray Park - Backend & Systems Engineer</title>
+    <title>Ray Park - Ingénieur Backend & Systèmes</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +15,7 @@ layout: default
 </head>
 <body>
     <!-- Theme Toggle Button -->
-    <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
+    <button class="theme-toggle" id="themeToggle" aria-label="Basculer le mode sombre">
         <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <circle cx="12" cy="12" r="5"/>
             <line x1="12" y1="1" x2="12" y2="3"/>
@@ -33,8 +34,8 @@ layout: default
 
     <!-- Language Switcher -->
     <div class="lang-switcher">
-        <a href="{{ '/' | relative_url }}" class="active" title="English">EN</a>
-        <a href="{{ '/fr/' | relative_url }}" title="Français">FR</a>
+        <a href="{{ '/' | relative_url }}" title="English">EN</a>
+        <a href="{{ '/fr/' | relative_url }}" class="active" title="Français">FR</a>
     </div>
 
     <!-- Hero Section -->
@@ -43,8 +44,8 @@ layout: default
             <div class="hero-content">
                 <img src="{{ '/assets/images/profile.jpg' | relative_url }}" alt="Ray Park" class="profile-logo">
                 <h1 class="name">Ray Park</h1>
-                <p class="tagline">Backend & Systems Engineer</p>
-                <p class="location">Montreal, QC, Canada</p>
+                <p class="tagline">Ingénieur Backend & Systèmes</p>
+                <p class="location">Montréal, QC, Canada</p>
                 <div class="contact-links">
                     <a href="mailto:sparkiss@gmail.com" class="contact-btn">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -67,13 +68,13 @@ layout: default
     <!-- About Section -->
     <section class="about">
         <div class="container">
-            <h2 class="section-title">About Me</h2>
+            <h2 class="section-title">À Propos</h2>
             <div class="about-content">
-                <p>Results-driven backend and systems engineer with extensive experience in database-driven application development, backend architecture, and high-performance data systems. Proven ability to design and deliver robust software platforms, optimize large-scale databases, and manage full lifecycle development in complex enterprise environments.</p>
+                <p>Ingénieur backend et systèmes axé sur les résultats avec une vaste expérience dans le développement d'applications orientées bases de données, l'architecture backend et les systèmes de données haute performance. Capacité prouvée à concevoir et livrer des plateformes logicielles robustes, optimiser des bases de données à grande échelle et gérer le cycle de développement complet dans des environnements d'entreprise complexes.</p>
                 <div class="languages">
-                    <span class="lang-badge">English: Fluent</span>
-                    <span class="lang-badge">French: Intermediate (B1)</span>
-                    <span class="lang-badge">Korean: Native</span>
+                    <span class="lang-badge">Anglais : Courant</span>
+                    <span class="lang-badge">Français : Intermédiaire (B1)</span>
+                    <span class="lang-badge">Coréen : Langue maternelle</span>
                 </div>
             </div>
         </div>
@@ -82,7 +83,7 @@ layout: default
     <!-- Skills Tag Cloud -->
     <section class="skills">
         <div class="container">
-            <h2 class="section-title">Technical Skills</h2>
+            <h2 class="section-title">Compétences Techniques</h2>
             <div class="tag-cloud" id="tagCloud"></div>
         </div>
     </section>
@@ -90,27 +91,27 @@ layout: default
     <!-- Core Strengths -->
     <section class="strengths">
         <div class="container">
-            <h2 class="section-title">Core Strengths</h2>
+            <h2 class="section-title">Points Forts</h2>
             <div class="strength-grid">
                 <div class="strength-card">
                     <div class="strength-icon">💾</div>
-                    <h3>Database Expertise</h3>
-                    <p>Deep expertise in Oracle, MS SQL Server, MySQL, PostgreSQL, MongoDB with focus on optimization, migration, and high-availability</p>
+                    <h3>Expertise Base de Données</h3>
+                    <p>Expertise approfondie en Oracle, MS SQL Server, MySQL, PostgreSQL, MongoDB avec focus sur l'optimisation, la migration et la haute disponibilité</p>
                 </div>
                 <div class="strength-card">
                     <div class="strength-icon">🏗️</div>
-                    <h3>Architecture Design</h3>
-                    <p>Microservices, RESTful APIs, event-driven systems using DDD, TDD, and clean architecture principles</p>
+                    <h3>Conception d'Architecture</h3>
+                    <p>Microservices, APIs RESTful, systèmes événementiels utilisant DDD, TDD et les principes d'architecture propre</p>
                 </div>
                 <div class="strength-card">
                     <div class="strength-icon">⚡</div>
-                    <h3>Performance Engineering</h3>
-                    <p>High-performance systems with Rust, advanced caching (Redis), message queues (RabbitMQ), and search (Elasticsearch, Solr)</p>
+                    <h3>Ingénierie de Performance</h3>
+                    <p>Systèmes haute performance avec Rust, cache avancé (Redis), files de messages (RabbitMQ) et recherche (Elasticsearch, Solr)</p>
                 </div>
                 <div class="strength-card">
                     <div class="strength-icon">🚀</div>
                     <h3>DevOps & CI/CD</h3>
-                    <p>Docker, GitLab CI, automated testing, and modern deployment pipelines</p>
+                    <p>Docker, GitLab CI, tests automatisés et pipelines de déploiement modernes</p>
                 </div>
             </div>
         </div>
@@ -119,67 +120,67 @@ layout: default
     <!-- Experience Timeline -->
     <section class="experience">
         <div class="container">
-            <h2 class="section-title">Professional Journey</h2>
+            <h2 class="section-title">Parcours Professionnel</h2>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-date">2015 - 2025</div>
                     <div class="timeline-content">
-                        <h3>Backend Developer</h3>
+                        <h3>Développeur Backend</h3>
                         <h4>REOL Services</h4>
                         <ul>
-                            <li>Managed 2.5 TB Oracle database (150+ tables, 300+ procedures)</li>
-                            <li>Built microservice architecture with PHP (Yii), integrating RabbitMQ and Beanstalk</li>
-                            <li>Developed high-performance Rust components for CPU-intensive workloads</li>
-                            <li>Implemented Elasticsearch (335M+ records) and Solr search systems</li>
-                            <li>Championed DDD, TDD, and modern Git workflows</li>
+                            <li>Gestion d'une base de données Oracle de 2,5 To (150+ tables, 300+ procédures)</li>
+                            <li>Construction d'une architecture microservices avec PHP (Yii), intégrant RabbitMQ et Beanstalk</li>
+                            <li>Développement de composants Rust haute performance pour les charges de travail intensives en CPU</li>
+                            <li>Implémentation d'Elasticsearch (335M+ enregistrements) et systèmes de recherche Solr</li>
+                            <li>Promotion du DDD, TDD et des workflows Git modernes</li>
                         </ul>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">2013 - 2015</div>
                     <div class="timeline-content">
-                        <h3>Senior Developer</h3>
+                        <h3>Développeur Senior</h3>
                         <h4>Rescue Geeks</h4>
                         <ul>
-                            <li>Designed C++/Qt-based POS application with Firebird backend</li>
-                            <li>Integrated multiple payment gateways (Verifone, Mercury, FirstData)</li>
-                            <li>Developed solutions for restaurants, retail, salons, and arcade businesses</li>
+                            <li>Conception d'application POS basée sur C++/Qt avec backend Firebird</li>
+                            <li>Intégration de plusieurs passerelles de paiement (Verifone, Mercury, FirstData)</li>
+                            <li>Développement de solutions pour restaurants, commerce de détail, salons et salles d'arcade</li>
                         </ul>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">2009 - 2013</div>
                     <div class="timeline-content">
-                        <h3>Software Designer/Developer</h3>
+                        <h3>Concepteur/Développeur Logiciel</h3>
                         <h4>Firstin Wireless Technology</h4>
                         <ul>
-                            <li>System architect and Oracle DBA for 200+ customer websites</li>
-                            <li>Developed WiFi/3G softphone solutions for iOS, Android, BlackBerry</li>
-                            <li>Built VoIP calling, Click-to-Call, and SMS callback features</li>
+                            <li>Architecte système et DBA Oracle pour 200+ sites web clients</li>
+                            <li>Développement de solutions softphone WiFi/3G pour iOS, Android, BlackBerry</li>
+                            <li>Construction de fonctionnalités VoIP, Click-to-Call et rappel SMS</li>
                         </ul>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">2003 - 2009</div>
                     <div class="timeline-content">
-                        <h3>Product Owner & Project Manager</h3>
-                        <h4>University of Seoul - Center for Computer and Information</h4>
+                        <h3>Product Owner & Chef de Projet</h3>
+                        <h4>Université de Séoul - Centre d'Informatique</h4>
                         <ul>
-                            <li>Led enterprise-scale university systems (WISE, SSO, Research Management)</li>
-                            <li>Managed IBM p570 / HP rx7620 servers with Oracle 10g on AIX/HP-UX</li>
-                            <li>Part-time Instructor: Computer Security, Assembly Language</li>
+                            <li>Direction de systèmes universitaires d'entreprise (WISE, SSO, Gestion de Recherche)</li>
+                            <li>Gestion de serveurs IBM p570 / HP rx7620 avec Oracle 10g sur AIX/HP-UX</li>
+                            <li>Chargé de cours : Sécurité Informatique, Langage Assembleur</li>
                         </ul>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">2001 - 2003</div>
                     <div class="timeline-content">
-                        <h3>Early Career Roles</h3>
+                        <h3>Début de Carrière</h3>
                         <h4>E-Call Plus Corp. & Pointcast Corp.</h4>
                         <ul>
-                            <li>Network management application development (EMS/NMS)</li>
-                            <li>LED display management system</li>
-                            <li>Online hotel reservation platform (early dot-com era)</li>
+                            <li>Développement d'applications de gestion de réseau (EMS/NMS)</li>
+                            <li>Système de gestion d'affichage LED</li>
+                            <li>Plateforme de réservation d'hôtel en ligne (ère dot-com)</li>
                         </ul>
                     </div>
                 </div>
@@ -190,25 +191,25 @@ layout: default
     <!-- Education -->
     <section class="education">
         <div class="container">
-            <h2 class="section-title">Education</h2>
+            <h2 class="section-title">Formation</h2>
             <div class="edu-grid">
                 <div class="edu-card">
-                    <div class="edu-degree">Ph.D. Candidate</div>
-                    <div class="edu-field">Computer Science and Statistics</div>
-                    <div class="edu-school">University of Seoul, Korea</div>
+                    <div class="edu-degree">Candidat au Doctorat</div>
+                    <div class="edu-field">Informatique et Statistiques</div>
+                    <div class="edu-school">Université de Séoul, Corée</div>
                     <div class="edu-year">2005-2008</div>
                 </div>
                 <div class="edu-card">
-                    <div class="edu-degree">M.S.</div>
-                    <div class="edu-field">Computer Science and Statistics</div>
-                    <div class="edu-school">University of Seoul, Korea</div>
+                    <div class="edu-degree">Maîtrise</div>
+                    <div class="edu-field">Informatique et Statistiques</div>
+                    <div class="edu-school">Université de Séoul, Corée</div>
                     <div class="edu-year">1998-2001</div>
-                    <p class="edu-thesis">Thesis: Performance Evaluation of Replication Control and Catalog Management Schemes for Distributed Main Memory Databases</p>
+                    <p class="edu-thesis">Thèse : Évaluation des performances des schémas de contrôle de réplication et de gestion de catalogue pour les bases de données en mémoire principale distribuées</p>
                 </div>
                 <div class="edu-card">
-                    <div class="edu-degree">B.S.</div>
-                    <div class="edu-field">Computer Science and Statistics</div>
-                    <div class="edu-school">University of Seoul, Korea</div>
+                    <div class="edu-degree">Baccalauréat</div>
+                    <div class="edu-field">Informatique et Statistiques</div>
+                    <div class="edu-school">Université de Séoul, Corée</div>
                     <div class="edu-year">1991-1998</div>
                 </div>
             </div>
@@ -218,54 +219,54 @@ layout: default
     <!-- Home Lab & Interests -->
     <section class="homelab">
         <div class="container">
-            <h2 class="section-title">Home Lab & Interests</h2>
+            <h2 class="section-title">Labo Maison & Intérêts</h2>
             <div class="homelab-content">
-                <p class="homelab-intro">I maintain a comprehensive home lab that serves as a personal cloud and experimentation platform:</p>
+                <p class="homelab-intro">Je maintiens un laboratoire domestique complet qui sert de cloud personnel et de plateforme d'expérimentation :</p>
                 <div class="homelab-grid">
                     <div class="homelab-card">
                         <div class="homelab-icon">🌐</div>
                         <h3>OpenWRT</h3>
-                        <p>Custom network infrastructure and routing</p>
+                        <p>Infrastructure réseau personnalisée et routage</p>
                     </div>
                     <div class="homelab-card">
                         <div class="homelab-icon">💻</div>
-                        <h3>Development Environments</h3>
-                        <p>Dev, staging, and production for tech stack training</p>
+                        <h3>Environnements de Développement</h3>
+                        <p>Dev, staging et production pour la formation technique</p>
                     </div>
                     <div class="homelab-card">
                         <div class="homelab-icon">🏠</div>
-                        <h3>Home Automation</h3>
-                        <p>Smart home systems and automation projects</p>
+                        <h3>Domotique</h3>
+                        <p>Systèmes de maison intelligente et projets d'automatisation</p>
                     </div>
                     <div class="homelab-card">
                         <div class="homelab-icon">🍽️</div>
-                        <h3>Small Business Support</h3>
-                        <p>Restaurant technology experimentation and solutions</p>
+                        <h3>Support Petites Entreprises</h3>
+                        <p>Expérimentation et solutions technologiques pour restaurants</p>
                     </div>
                     <div class="homelab-card">
                         <div class="homelab-icon">☁️</div>
-                        <h3>Personal Cloud</h3>
-                        <p>Synology NAS and self-hosted services</p>
+                        <h3>Cloud Personnel</h3>
+                        <p>NAS Synology et services auto-hébergés</p>
                     </div>
                     <div class="homelab-card">
                         <div class="homelab-icon">🚀</div>
                         <h3>RedPanda</h3>
-                        <p>Kafka-compatible streaming platform for real-time data</p>
+                        <p>Plateforme de streaming compatible Kafka pour données temps réel</p>
                     </div>
                     <div class="homelab-card">
                         <div class="homelab-icon">🔄</div>
-                        <h3>CDC/ETL Pipelines</h3>
-                        <p>Change Data Capture and ETL workflows with Debezium</p>
+                        <h3>Pipelines CDC/ETL</h3>
+                        <p>Capture de données de changement et workflows ETL avec Debezium</p>
                     </div>
                     <div class="homelab-card">
                         <div class="homelab-icon">🔐</div>
                         <h3>VPN & Tunneling</h3>
-                        <p>Wireguard, OpenVPN, and Cloudflared for secure access</p>
+                        <p>Wireguard, OpenVPN et Cloudflared pour accès sécurisé</p>
                     </div>
                     <div class="homelab-card">
                         <div class="homelab-icon">⚙️</div>
-                        <h3>Automation</h3>
-                        <p>Infrastructure automation and workflow orchestration</p>
+                        <h3>Automatisation</h3>
+                        <p>Automatisation d'infrastructure et orchestration de workflows</p>
                     </div>
                 </div>
             </div>
@@ -275,7 +276,7 @@ layout: default
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Ray Park. Built with Jekyll.</p>
+            <p>&copy; 2025 Ray Park. Construit avec Jekyll.</p>
         </div>
     </footer>
 
